--- a/package.json
+++ b/package.json
@@ -1,21 +1,36 @@
 {
-  "name": "presonal-homepage",
+  "name": "personal-homepage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axion": "^0.1.0",
+    "axios": "^1.6.7",
+    "color-alpha": "^1.1.3",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
+    "react-component": "^0.0.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.2.3",
+    "styled-components": "^6.1.1",
+    "styled-normalize": "^8.1.1",
+    "toolkit": "^1.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4"
   }
 }
