--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axion": "^0.1.0",
     "axios": "^1.6.7",
-    "color-alpha": "^1.1.3",
     "gh-pages": "^6.1.0",
+    "color-alpha": "^1.1.3",
     "react": "^18.2.0",
     "react-component": "^0.0.0",
     "react-dom": "^18.2.0",
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4"
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "gh-pages": "^6.1.1"
   }
 }
