--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-homepage",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tomaszbrylski.github.io/Personal-homepage/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
